Bug 656243 - Permanent orange: test_imapContentLength.js | test failed (with xpcshell return code: 3) caused by Linux notification changes; Protect against repeated attempts to get the message preview text, and stop a crash happening if there are no authors. r=Standard8. Bustage fix for CLOSED TREE